# brain-swarm

./: .gitignore  README.md
brain_swarm/: demo.py  requirements.txt  simulation_results.txt  simulation_results_v2.txt  simulation_verify.py  simulation_verify_v2.py  tgam_demo.py  verify_all.py
brain_swarm/biosignal_archive/: config.py  realtime_pipeline.py  signal_enhancer.py  tgam_reader.py
brain_swarm/data/models/: brain_decoder.pkl
brain_swarm/docs/: BCI技术全景研究_侵入vs非侵入.md  BCI技术全景研究_完整报告.md  BOM_垂直优化选型报告.md  NeuroResonator_完整产品方案.md  PCB_设计规格书.md  产品架构_混合路线_AI优先.md  从零到一脑控设备详细技术文档.md  脑控设备从零到一技术蓝图.md  脑电数据商业化_数据即资产.md  零件购买链接清单.md
brain_swarm/firmware/esp32s3/: CMakeLists.txt
brain_swarm/firmware/esp32s3/main/: CMakeLists.txt  closed_loop.c  fft_processor.c  focus_detector_model.h  focus_detector_model.tflite  focus_inference.c  main.c  uart_protocol.c  wifi_ota.c
brain_swarm/firmware/esp32s3/main/include/: closed_loop.h  fft_processor.h  focus_inference.h  uart_protocol.h  wifi_ota.h
brain_swarm/firmware/nrf5340/: prj.conf
brain_swarm/host_tools/: calibration.py  data_viewer.py  device_flasher.py  requirements.txt  simulator.py  train_focus_model.py
brain_swarm/src/: __init__.py  action_mapper.py  biosignal.py  brain_decoder.py  closed_loop_pipeline.py  config.py  continuous_control.py  drone_controller.py  eeg_processor.py  focus_detector.py  intuitive_bci.py  pc_controller.py  preset_actions.json  realtime_pipeline.py  signal_enhancer.py  ssvep_decoder.py
brain_swarm/src/experience/: __init__.py  demo_experience.py
(+16 files in other folders)
